--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,15 @@
 {
     "name": "gorczakw/amount",
-    "description": "Model concept for amounts.",
+    "description": "Model concept for amounts for Laravel framework",
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "laravel/framework": ">=8.0",
+        "illuminate/contracts": ">=8.0"
     },
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Gorczakw\\Amount\\": "src/"
+            "Gorczakw\\LaravelAmount\\": "src/"
         }
     },
     "authors": [
